objects/Income_Debit_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Payment_Description__c</fullName>
        <label>Customer Payment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Code__c</fullName>
        <label>DD Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Collection_Date__c</fullName>
        <label>DD Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DD_Failed_Description__c</fullName>
        <label>DD Failed Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DD Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DD_File_Name__c</fullName>
        <label>DD File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Stage__c</fullName>
        <label>DD Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DD_Status__c</fullName>
        <label>DD Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Direct_Debit__c</fullName>
        <label>Income Direct Debit</label>
        <referenceTo>Income_Direct_Debit__c</referenceTo>
        <relationshipLabel>Income Debit History</relationshipLabel>
        <relationshipName>Income_Debit_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Internal_Payment_Description__c</fullName>
        <label>Internal Payment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPSP_Collection_Date__c</fullName>
        <formula>DATE(YEAR(DD_Collection_Date__c),  MONTH(DD_Collection_Date__c), VALUE(TEXT(Income_Direct_Debit__r.DD_Collection_Day__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPSP Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Schedule</label>
        <referenceTo>Payment_Schedule__c</referenceTo>
        <relationshipLabel>Income Debit History</relationshipLabel>
        <relationshipName>Income_Debit_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Income Debit History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Income Debit History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Debit History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>